--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-node_modules/
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+/.idea
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.idea
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
